--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -17,13 +17,15 @@
         <td><%= link.title %></td>
         <td><%= link.url %></td>
         <td><%= link_to 'Show', link %></td>
-        <td><%= link_to 'Edit', edit_link_path(link) %></td>
-        <td><%= link_to 'Destroy', link, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+    <% if link.user == current_user %>
+      <td><%= link_to 'Edit', edit_link_path(link) %></td>
+      <td><%= link_to 'Destroy', link, method: :delete, data: { confirm: 'Are you sure?'}%></td>
     <% end %>
+	<% end %>
+	</tr>
   </tbody>
 </table>
 
-<br>
 
-<%= link_to 'New Link', new_link_path %>
+
+
