--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -2,7 +2,7 @@
   <h1><a href="<%= @link.url %>"><%= @link.title %></a>
   <br> 
   <small>Submitted by 
-  <%= @link.user.try(:email) %></small></h1>
+  <%= @link.user.try(:name) %></small></h1>
 </div>
 
 <div class="btn-group">
